// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendIdentify destination action: all fields 1`] = `
Object {
  "anonymousId": "mV[ZQcEVgZO$MX",
  "groupId": "mV[ZQcEVgZO$MX",
  "integrations": Object {
    "All": false,
  },
  "traits": Object {
    "testType": "mV[ZQcEVgZO$MX",
  },
  "userId": "mV[ZQcEVgZO$MX",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendIdentify destination action: required fields 1`] = `
Object {
  "anonymousId": "mV[ZQcEVgZO$MX",
  "groupId": "mV[ZQcEVgZO$MX",
  "integrations": Object {
    "All": false,
  },
  "traits": Object {},
  "userId": "mV[ZQcEVgZO$MX",
}
`;
